<resources>
    <string name="app_name">Petagram</string>
    <string name="pnombre">Huitzi</string>
    <string name="plikes">0</string>
    <string name="menu_contacto">Contacto</string>}
    <string name="menu_acerca_de">Acerca de</string>
    <string name="titulo_about">Biografía del desarrollador</string>
    <string name="nombre_autor">Nombre: José Francisco</string>
    <string name="appellidos_autor">Apellidos: Salgado Rodríguez</string>
    <string name="profesion_autor">Profesión: Ingeniero en Computación</string>
    <string name="nacionalidad_autor">Nacionalidad: Mexicana</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
